--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -4,7 +4,8 @@
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="css/bootstrap2.min.css" rel="stylesheet" media="screen">
+    <link href="css/bootstrap-responsive2.css" rel="stylesheet">
   </head>
   <body class="container">
     <div class="hero-unit">
@@ -13,6 +14,6 @@
     </div>
     {{ content }}
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap2.min.js"></script>
   </body>
 </html>
