--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -8,7 +8,7 @@
     <link href="css/bootstrap-responsive2.css" rel="stylesheet">
   </head>
   <body class="container">
-    <div class="navbar">
+    <div class="navbar navbar-static-top">
       <div class="navbar-inner">
         <ul class="nav">
           <li><a href="/">tomo</a></li>
