--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -12,7 +12,9 @@
       <div class="navbar-inner">
         <ul class="nav">
           <li><a href="/">tomo</a></li>
-          <li class="pull-right"><a href="about.html">Link</a></li>
+        </ul>
+        <ul class="nav pull-right">
+          <li><a href="about.html">↓›?</a></li>
         </ul>
       </div>
     </div>
