--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -11,10 +11,10 @@
     <div class="navbar navbar-static-top">
       <div class="navbar-inner">
         <ul class="nav">
-          <li><a href="/">tomo</a></li>
+          <li><a href="/linluwi/">tomo</a></li>
         </ul>
         <ul class="nav pull-right">
-          <li><a href="about.html">↓›?</a></li>
+          <li><a href="/linluwi/about/">↓›?</a></li>
         </ul>
       </div>
     </div>
