--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -7,7 +7,7 @@
     <link href="css/bootstrap2.min.css" rel="stylesheet" media="screen">
     <link href="css/bootstrap-responsive2.css" rel="stylesheet">
   </head>
-  <body class="container">
+  <body class="container" lang="{{ page.lang }}">
     <div class="navbar navbar-static-top">
       <div class="navbar-inner">
         <ul class="nav">
