--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -6,9 +6,11 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap2.min.css" rel="stylesheet" media="screen">
     <link href="css/bootstrap-responsive2.css" rel="stylesheet">
+	<!-- future sitelen pona stylesheet -->
+	<link href="css/sitelen.css" rel="stylesheet">
   </head>
   <body class="container" lang="{{ page.lang }}">
-    <div class="navbar navbar-static-top">
+    <div class="navbar navbar-static-top" lang="tok">
       <div class="navbar-inner">
         <ul class="nav">
           <li><a href="/linluwi/">tomo</a></li>
