sitelen pona fixes

--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -16,7 +16,7 @@
           <li><a href="/linluwi/">tomo</a></li>
         </ul>
         <ul class="nav pull-right">
-          <li><a href="/linluwi/about/">↓›?</a></li>
+          <li><a href="/linluwi/about">ni li seme</a></li>
         </ul>
       </div>
     </div>
