--- a/css/sitelen.css
+++ b/css/sitelen.css
@@ -8,7 +8,11 @@
 	src: url("/linluwi/fonts/ffx.ttf"), local("fairfax pona hd");
 }
 
-*[lang="tok"] {
+*:lang("tok") {
 	font-family: "sitelen seli kiwen", "fairfax";
+	letter-spacing: unset;
+}
+
+.hero-unit h1:lang("tok") {
 	letter-spacing: unset;
 }
