i am very tired

--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ page.lang }}">
   <head>
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 	<!-- future sitelen pona stylesheet -->
 	<link href="css/sitelen.css" rel="stylesheet">
   </head>
-  <body class="container" lang="{{ page.lang }}">
+  <body class="container">
     <div class="navbar navbar-static-top" lang="tok">
       <div class="navbar-inner">
         <ul class="nav">
